Now I've uploaded HTML success project...Thank you

--- a/index.html
+++ b/index.html
@@ -8,5 +8,201 @@
 <body>
     <h1>Look mama, i'm using git</h1>
     <p>How are you?</p>
+    <h2>Do you Know? I want to be a software Engeneer</h2>
+    <!DOCTYPE html>
+<html lang="en">
+
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>My Html success projectt</title>
+	<style>
+		table,
+		th,
+		td {
+			border: 1px solid black;
+		}
+	</style>
+	<li></li>
+</head>
+
+<body>
+	<h1 style="text-align:center" id="top">Study with Mahee</h1>
+	<p align="center"><a href="http://www.studywithanis.com/" target="_blank" title="visit our website"><img
+				src="—Pngtree—html file document icon_4172792.png" alt="HTML5 logo" style="height:70px ; width:"></a>
+	</p>
+	<!-- to take an image in center , we've to use paragraph tag as mother tag of img tag.. in paragraph tag we've to use align attribute which value will center..! -->
+	<hr>
+	<iframe src="https://www.studywithanis.com/" frameborder="0" style="width:50%; height:400px;"></iframe>
+	<iframe width="49%" height="400" src="https://www.youtube.com/embed/C3NTM5vZ_Ao" frameborder="0"
+		allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+		allowfullscreen></iframe>
+	<hr>
+	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+		magna aliqua. Sed libero enim sed faucibus turpis in eu mi. Phasellus faucibus scelerisque eleifend donec
+		pretium vulputate sapien nec. Vel pharetra vel turpis nunc. Morbi tempus iaculis urna id volutpat lacus laoreet
+		non. Aliquet eget sit amet tellus cras adipiscing enim. Imperdiet massa tincidunt nunc pulvinar sapien.
+		Phasellus egestas tellus rutrum tellus. Magna sit amet purus gravida. In iaculis nunc sed augue lacus viverra
+		vitae congue. Tortor aliquam nulla facilisi cras fermentum odio eu. Nulla at volutpat diam ut venenatis. Tempus
+		iaculis urna id volutpat lacus laoreet non curabitur. Diam quis enim lobortis scelerisque fermentum dui faucibus
+		in. Urna porttitor rhoncus dolor purus non enim praesent elementum facilisis. Faucibus purus in massa tempor nec
+		feugiat nisl pretium fusce.</p>
+
+	<p>Facilisis magna etiam tempor orci eu lobortis elementum nibh tellus. Et tortor at risus viverra adipiscing at.
+		Viverra vitae congue eu consequat ac. Nisi quis eleifend quam adipiscing vitae proin sagittis nisl rhoncus.
+		Phasellus faucibus scelerisque eleifend donec pretium vulputate. Odio ut enim blandit volutpat maecenas volutpat
+		blandit aliquam. Turpis massa tincidunt dui ut ornare lectus. Tempor commodo ullamcorper a lacus. In ornare quam
+		viverra orci sagittis eu volutpat odio. Diam ut venenatis tellus in metus vulputate. Nibh nisl condimentum id
+		venenatis a condimentum vitae. Non diam phasellus vestibulum lorem. Nunc sed velit dignissim sodales ut eu sem
+		integer vitae. Viverra mauris in aliquam sem fringilla ut.</p>
+
+	<p>Non arcu risus quis varius quam quisque id diam. Fermentum dui faucibus in ornare quam viverra orci. Netus et
+		malesuada fames ac turpis egestas maecenas pharetra. Enim diam vulputate ut pharetra sit. Urna condimentum
+		mattis pellentesque id nibh tortor id. Gravida dictum fusce ut placerat orci nulla. Vitae sapien pellentesque
+		habitant morbi tristique. Molestie ac feugiat sed lectus vestibulum mattis ullamcorper velit sed. Enim blandit
+		volutpat maecenas volutpat blandit aliquam. Blandit volutpat maecenas volutpat blandit aliquam etiam erat velit
+		scelerisque. Et leo duis ut diam.</p>
+
+	<p>Hendrerit gravida rutrum quisque non tellus orci ac auctor augue. Velit sed ullamcorper morbi tincidunt ornare.
+		Suspendisse faucibus interdum posuere lorem ipsum dolor sit. Aliquam etiam erat velit scelerisque in dictum.
+		Augue lacus viverra vitae congue eu consequat ac felis donec. Nulla facilisi nullam vehicula ipsum a. Tristique
+		nulla aliquet enim tortor at auctor. Vel elit scelerisque mauris pellentesque pulvinar pellentesque habitant
+		morbi tristique. Nulla pellentesque dignissim enim sit amet venenatis. Odio tempor orci dapibus ultrices in
+		iaculis nunc sed augue. Etiam non quam lacus suspendisse faucibus interdum posuere lorem ipsum.<mark> &amp;nbsp;</mark> &lt;html&gt;</p>
+		<!--to show any entity like &nbsp; we should use &amp; entity for & sign,, and then we'll write down nbsp-->
+	<hr>
+	<table>
+		<caption>Student Information</caption>
+		<thead>
+			<tr>
+				<th>ID</th>
+				<th>Name</th>
+				<th>GPA</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>106</td>
+				<td>Rabeya</td>
+				<td>5</td>
+			</tr>
+			<tr>
+				<td>102</td>
+				<td>Suparna</td>
+				<td>4.5</td>
+
+
+			</tr>
+			<tr>
+				<td>103</td>
+				<td>Lina</td>
+				<td>2.5</td>
+
+			</tr>
+		</tbody>
+	</table>
+	<hr>
+	<form action="">
+		<!-- here action value will be the database server's name where the information will save; though i've no database server, i did't use fill this value of action attribute -->
+		<datalist id="names">
+			<option value="Ma1">Mahee</option>
+			<!--Here value will be save in data base if anyone click on 'Mahee' option-->
+			<option value="Ju2">Jubayer</option>
+			<option value="Sa3">Sayed</option>
+			<option value="Re4">Real</option>
+			<option value="Ha5">Hasna</option>
+		</datalist>
+		<datalist id="email">
+			<option value="mahfuz.mahee.1234@gmail.com">mahfuz.mahee.1234@gmail.com</option>
+			<option value="obiduullah77@gmial.com">obiduullah77@gmial.com</option>
+			<option value="mahee.the.bigboss@gmail.com">mahee.the.bigboss@gmail.com</option>
+		</datalist>
+		<datalist id="numbers">
+			<option value="01713564429">01713564429</option>
+			<option value="01721920612">01721920612</option>
+			<option value="01775917403">01775917403</option>
+		</datalist>
+		<p>Username&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;: &nbsp;<input type="text" required
+				placeholder="Only letters and numbers" required pattern="[a-zA-Z0-9]{3}" list="names" size="32"></p>
+		<!-- here {3} means that we can use a-zA-Z0-9 for only three times... if i put + after the third bracket instead of {3}, we can put a-zA-Z0-9 for sevaral times  -->
+		<!-- there are many kinds of input type values.. such as- *button, reset, submit,>for button type input,,,,, text, password, hidden>for input field or text area type input and ,,, checkbox, radio, image> for another kind of input-->
+		<!-- size attribute defines the text field size -->
+		<!-- here list attribue defines data list id-->
+		<p>Password &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; : &nbsp;<input type="password"
+				placeholder="Enter your password please" required size="32"></p>
+		<p>Email &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;: &nbsp;<input
+				type="email" placeholder="Enter your email here" required list="email" size="32"></p>
+		<p>Phone number &nbsp;: &nbsp;<input type="number" placeholder="Enter your phone number please" required
+				list="numbers" size="32"></p><!-- size attribute doesn't works in number type -->
+				<br>
+		
+
+		<p>
+			Religion :  <input type="checkbox" name="religion" checked >Islam
+						<input type="checkbox" name="religion">Hindu
+						<input type="checkbox" name="religion">Christian
+						<input type="checkbox" name="religion">Others
+
+		</p>
+		<p>
+			Gender &nbsp; : <input type="radio" name="gender" checked>Male
+							<input type="radio" name="gender">Female
+							<input type="radio" name="gender">Others
+		</p>
+		<p>
+			Department : 	<select name="" id="">
+
+								<option value="">CSE</option>
+								<option value="">EEE</option>
+								<option value="" selected>Physics</option><!--for this reason we need selected attribute for select tag insead of checked attribute..checked attribute is used for radio, checkbox etc.-->
+								<option value="">Math</option>
+								<option value="">Chemestry</option>
+								<option value="">Biology</option>
+							</select><!--to need dropdown menu we nedd select tag-->
+		</p>
+		<p>
+			Feedback : <br>
+					<textarea name="" id="" cols="30" rows="10">
+						
+
+					</textarea>
+
+		</p>
+		<p>
+			<input type="submit" value="Sign up">
+			<input type="reset" value="Clear all">
+		</p>
+	</form>
+	<br>
+	<hr>
+		<h2>Our Vedios</h2>
+		<p>
+			<video src="media/HSC ICT _ Bangla HTML Tutorial 42 _ How to add Audio in website.mp4" height="300px">
+
+			</video>
+		</p>
+		<p>
+			<audio src="media/HSC ICT ! Bangla HTML Tutorial 42 ! How to add Audio in website.mp3" controls></audio>
+			<!--we can use controls attribute for video tag, but no needs.. but controls attribute is must for audio tag-->
+		</p>
+		<br><hr><br><br>
+	<p>
+		<ol>
+			<li><a href="https://www.facebook.com/Mahfuzur.Rahman.Mahee.10/" target="_blank">My facebook profile</a></li>
+			<li><a href="file:///C:/Users/Mahee/Desktop/Full%20Html%20Success%20Project/html%20webpage.html?religion=on&gender=on" target="_blank"> My website</a></li>
+			<li><a href="#top"> Go to top</a></li>
+
+
+		</ol>
+
+
+	</p>
+	<p>
+		developed by <span style="color:red; font-size: 25px;">  &copy; Mahfuzur Rahman Mahee</span>
+	
+	</p>
+</body>
+
+</html>
 </body>
 </html>
