I've added video controls

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 	<hr>
 		<h2>Our Vedios</h2>
 		<p>
-			<video src="media/HSC ICT _ Bangla HTML Tutorial 42 _ How to add Audio in website.mp4" height="300px">
+			<video src="media/HSC ICT _ Bangla HTML Tutorial 42 _ How to add Audio in website.mp4" height="300px" controls>
 
 			</video>
 		</p>
