I've solved 'my html succes project problem' of adding my website

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			border: 1px solid black;
 		}
 	</style>
-	
+
 </head>
 
 <body>
@@ -57,8 +57,9 @@
 		Augue lacus viverra vitae congue eu consequat ac felis donec. Nulla facilisi nullam vehicula ipsum a. Tristique
 		nulla aliquet enim tortor at auctor. Vel elit scelerisque mauris pellentesque pulvinar pellentesque habitant
 		morbi tristique. Nulla pellentesque dignissim enim sit amet venenatis. Odio tempor orci dapibus ultrices in
-		iaculis nunc sed augue. Etiam non quam lacus suspendisse faucibus interdum posuere lorem ipsum.<mark> &amp;nbsp;</mark> &lt;html&gt;</p>
-		<!--to show any entity like &nbsp; we should use &amp; entity for & sign,, and then we'll write down nbsp-->
+		iaculis nunc sed augue. Etiam non quam lacus suspendisse faucibus interdum posuere lorem ipsum.<mark>
+			&amp;nbsp;</mark> &lt;html&gt;</p>
+	<!--to show any entity like &nbsp; we should use &amp; entity for & sign,, and then we'll write down nbsp-->
 	<hr>
 	<table>
 		<caption>Student Information</caption>
@@ -123,36 +124,38 @@
 				type="email" placeholder="Enter your email here" required list="email" size="32"></p>
 		<p>Phone number &nbsp;: &nbsp;<input type="number" placeholder="Enter your phone number please" required
 				list="numbers" size="32"></p><!-- size attribute doesn't works in number type -->
-				<br>
-		
+		<br>
+
 
 		<p>
-			Religion :  <input type="checkbox" name="religion" checked >Islam
-						<input type="checkbox" name="religion">Hindu
-						<input type="checkbox" name="religion">Christian
-						<input type="checkbox" name="religion">Others
+			Religion : <input type="checkbox" name="religion" checked>Islam
+			<input type="checkbox" name="religion">Hindu
+			<input type="checkbox" name="religion">Christian
+			<input type="checkbox" name="religion">Others
 
 		</p>
 		<p>
 			Gender &nbsp; : <input type="radio" name="gender" checked>Male
-							<input type="radio" name="gender">Female
-							<input type="radio" name="gender">Others
+			<input type="radio" name="gender">Female
+			<input type="radio" name="gender">Others
 		</p>
 		<p>
-			Department : 	<select name="" id="">
+			Department : <select name="" id="">
 
-								<option value="">CSE</option>
-								<option value="">EEE</option>
-								<option value="" selected>Physics</option><!--for this reason we need selected attribute for select tag insead of checked attribute..checked attribute is used for radio, checkbox etc.-->
-								<option value="">Math</option>
-								<option value="">Chemestry</option>
-								<option value="">Biology</option>
-							</select><!--to need dropdown menu we nedd select tag-->
+				<option value="">CSE</option>
+				<option value="">EEE</option>
+				<option value="" selected>Physics</option>
+				<!--for this reason we need selected attribute for select tag insead of checked attribute..checked attribute is used for radio, checkbox etc.-->
+				<option value="">Math</option>
+				<option value="">Chemestry</option>
+				<option value="">Biology</option>
+			</select>
+			<!--to need dropdown menu we nedd select tag-->
 		</p>
 		<p>
 			Feedback : <br>
-					<textarea name="" id="" cols="30" rows="10">
-						
+			<textarea name="" id="" cols="30" rows="10">
+
 
 					</textarea>
 
@@ -164,31 +167,32 @@
 	</form>
 	<br>
 	<hr>
-		<h2>Our Vedios</h2>
-		<p>
-			<video src="media/HSC ICT _ Bangla HTML Tutorial 42 _ How to add Audio in website.mp4" height="300px" controls>
-
-			</video>
-		</p>
-		<p>
-			<audio src="media/HSC ICT ! Bangla HTML Tutorial 42 ! How to add Audio in website.mp3" controls></audio>
-			<!--we can use controls attribute for video tag, but no needs.. but controls attribute is must for audio tag-->
-		</p>
-		<br><hr><br><br>
+	<h2>Our Vedios</h2>
 	<p>
-		<ol>
-			<li><a href="https://www.facebook.com/Mahfuzur.Rahman.Mahee.10/" target="_blank">My facebook profile</a></li>
-			<li><a href="file:///C:/Users/Mahee/Desktop/Full%20Html%20Success%20Project/html%20webpage.html?religion=on&gender=on" target="_blank"> My website</a></li>
-			<li><a href="#top"> Go to top</a></li>
+		<video src="media/HSC ICT _ Bangla HTML Tutorial 42 _ How to add Audio in website.mp4" height="300px" controls>
+
+		</video>
+	</p>
+	<p>
+		<audio src="media/HSC ICT ! Bangla HTML Tutorial 42 ! How to add Audio in website.mp3" controls></audio>
+		<!--we can use controls attribute for video tag, but no needs.. but controls attribute is must for audio tag-->
+	</p>
+	<br>
+	<hr><br><br>
+	<p>
+	<ol>
+		<li><a href="https://www.facebook.com/Mahfuzur.Rahman.Mahee.10/" target="_blank">My facebook profile</a></li>
+		<li><a href="https://mahee7177.github.io/my-first-website/" target="_blank"> My html success project</a></li>
+		<li><a href="#top"> Go to top</a></li>
 
 
-		</ol>
+	</ol>
 
 
 	</p>
 	<p>
-		developed by <span style="color:red; font-size: 25px;">  &copy; Mahfuzur Rahman Mahee</span>
-	
+		developed by <span style="color:red; font-size: 25px;"> &copy; Mahfuzur Rahman Mahee</span>
+
 	</p>
 </body>
 
