I've now added the icon of my page in title bar

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 			border: 1px solid black;
 		}
 	</style>
-
+	<link rel="short cut icon" href="—Pngtree—html file document icon_4172792.ico">
+	<!--to make icon in the title bar  at first we've to generate image to .ico from 'https://www.online-convert.com/' this website or search in google icon generator. remember.. ico means icon.. after doing that we've to add link tag in head section..in href attribute we will put the icon or icon folder name & in rel attribute we'll put some text then we will reload the page & then we can see the icon in the title bar-->
 </head>
 
 <body>
